# yuancity-web

./: .gitignore
back/: .gitignore  Dockerfile  setup.cfg
back/apps/AI/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
back/apps/AI/signals/: signal_case_free.py  signal_case_full.py
back/apps/cart/: admin.py  models.py  utils.py  views.py
back/apps/category/: admin.py  models.py  serializers.py  urls.py  views.py
back/apps/count/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
back/apps/coupons/: admin.py  models.py  views.py
back/apps/orders/: admin.py  models.py  serializers.py  urls.py  views.py
back/apps/payment/: models.py  serializers.py  urls.py  utils.py  views.py
back/apps/product/: admin.py  models.py  serializers.py  urls.py  views.py
back/apps/product/utils/: ai_search.py
back/apps/promotions/: admin.py  models.py  serializers.py  urls.py  views.py
back/apps/reviews/: admin.py  models.py  urls.py  views.py
back/apps/support/: admin.py  models.py  serializers.py  urls.py  views.py
back/apps/user/: admin.py  models.py  serializers.py  urls.py  views.py
back/apps/user/data/: colombia_locations.py
back/apps/user/utils/: jwt.py  password.py  (+4 more)
back/apps/utils/: pagination.py  yuancity_stage_templates.py
back/apps/wishlist/: admin.py  models.py  urls.py  views.py
back/core/: settings.py  urls.py
back/core/midle/: GeoMidle.py
back/core/utils/: email.py
back/templates/email/: activation.html  confirmation.html  new_movie_notification.html  password_changed_confirmation.html  password_reset.html
(+77 files in other folders)
