[metadata]
name = yuancity
version = 0.0.1
description = A Django project for YuanCity
author = Jesus Delgado
author_email = themurder261@gmail.com

[options]
packages = find:
include_package_data = true
install_requires =
    Django==5.2.9
    django-cors-headers==4.0.0
    django-environ==0.12.0
    djangorestframework==3.15.0
    djangorestframework-api-response==0.1.0
    djangorestframework-simplejwt==5.4.0
    django-redis==5.3.0
    django-celery-beat==2.8.1
    django-ckeditor==6.6.0
    djoser==2.3.0
    PyJWT==2.8.0
    social-auth-app-django==5.1.0
    social-auth-core==4.4.0
    jsonpickle==3.1.0
    pillow
    mutagen==1.47.0
    argon2-cffi==21.3.0
    argon2-cffi-bindings==21.2.0
    boto3
    botocore==1.31.57
    django-storages
    Markdown==3.7
    gunicorn==23.0.0
    whitenoise==6.4.0
    uvicorn==0.23.0
    requests
    django-unfold==0.71.0
    django-bunny-storage==0.1.2
    channels==4.3.1
    channels-redis==4.0.0
    pandas
    django-import-export==4.3.7
    django-user-agents==0.4.0
    django-ckeditor-5==0.2.17
    python-jose==3.4.0
    pytesseract
    pypdf
    unstructured
    pdfminer
    docx2txt
    networkx
    openpyxl
    twilio
    google-auth
    exponent-server-sdk==2.0.0
    python-slugify==8.0.4
    stripe==14.0.1
    psycopg2-binary==2.9.11
    openai
    moviepy
[options.packages.find]
exclude =
    myenv
    templates
